[package]
name = "samfusdl"
version = "0.1.4"
authors = ["Andrew Gunnerson <chillermillerlong@hotmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.63"
clap = { version = "3.2.20", features = ["derive", "env"] }
crc32fast = "1.3.2"
dirs = "4.0.0"
env_logger = "0.9.0"
log = "0.4.17"
progresslib = { path = "progresslib" }
samfuslib = { path = "samfuslib" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["full"] }
tokio-stream = "0.1.9"

[target.'cfg(windows)'.dependencies]
memoffset = "0.6.5"
winapi = "0.3.9"

[workspace]
members = ["progresslib", "samfuslib"]
