[package]
name = "samfusdl"
version = "0.1.5"
authors = ["Andrew Gunnerson <chillermillerlong@hotmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive", "env"] }
crc32fast = "1.3.2"
dirs = "4.0.0"
env_logger = "0.9.3"
log = "0.4.17"
progresslib = { path = "progresslib" }
samfuslib = { path = "samfuslib" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = "0.1.11"

[target.'cfg(windows)'.dependencies]
memoffset = "0.7.1"
winapi = "0.3.9"

[workspace]
members = ["progresslib", "samfuslib"]
