[package]
name = "samfusdl"
version = "0.1.6"
authors = ["Andrew Gunnerson <chillermillerlong@hotmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive", "env"] }
crc32fast = "1.3.2"
dirs = "4.0.0"
env_logger = "0.10.0"
log = "0.4.17"
progresslib = { path = "progresslib" }
samfuslib = { path = "samfuslib" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.12"

[target.'cfg(windows)'.dependencies]
memoffset = "0.8.0"
winapi = "0.3.9"

[workspace]
members = ["progresslib", "samfuslib"]
