[package]
name = "samfuslib"
version = "0.1.3"
authors = ["Andrew Gunnerson <chillermillerlong@hotmail.com>"]
edition = "2018"

[dependencies]
aes = "0.7.5"
base64 = "0.13.0"
block-modes = "0.8.1"
block-padding = "0.2.1"
bytes = "1.1.0"
cipher = "0.3.0"
futures-core = "0.3.19"
hex-literal = "0.3.4"
log = "0.4.14"
md5 = "0.7.0"
reqwest = { version = "0.11.8", features = ["cookies", "stream"] }
thiserror = "1.0.30"
xmltree = "0.10.3"

[dev-dependencies]
assert_matches = "1.5.0"
