[package]
name = "samfuslib"
version = "0.1.6"
authors = ["Andrew Gunnerson <chillermillerlong@hotmail.com>"]
edition = "2018"

[dependencies]
aes = "0.8.2"
base64 = "0.21.0"
block-padding = "0.3.2"
bytes = "1.4.0"
cbc = "0.1.2"
cipher = { version = "0.4.3", features = ["alloc", "block-padding"] }
futures-core = "0.3.26"
hex-literal = "0.3.4"
log = "0.4.17"
md5 = "0.7.0"
reqwest = { version = "0.11.14", features = ["cookies", "stream"] }
thiserror = "1.0.38"
xmltree = "0.10.3"

[dev-dependencies]
assert_matches = "1.5.0"
